--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "config": "^3.3.1",
+    "youtube-node": "^1.3.3"
   }
 }
