--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "typescript_study",
   "version": "1.0.0",
   "description": "",
-  "main": "http2.js",
+  "main": "index.js",
   "scripts": {
     "start": "npm run build:live",
     "build": "tsc -p .",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/http2.ts"
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts"
   },
   "keywords": [],
   "author": "",
