--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.10.1",
+    "@types/node-fetch": "^2.5.7",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
@@ -21,6 +22,7 @@
   "dependencies": {
     "config": "^3.3.1",
     "firebase-admin": "^9.2.0",
+    "node-fetch": "^2.6.1",
     "youtube-node": "^1.3.3"
   }
 }
